<resources>
    <string name="app_name">VBantu</string>
    <string name="homeTitle">Blood Donation</string>
    <string name="communityTitle">Community</string>
    <string name="profileTitle">Profile</string>
    <string name="welcome">Welcome To VBantu</string>
    <string name="welcomeBack">Welcome Back To VBantu</string>
    <string name="loginToContinue">Login/Sign Up to Continue</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="donor">Donor</string>
    <string name="organiser">Organiser</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="companyName">Company Name</string>
    <string name="fullname">Full Name</string>
    <string name="fillInPersonalInfo">Please fill in your personal information</string>
    <string name="clickToSelect">Click To Select</string>
    <string name="dateOfBirth">Date of Birth:</string>
    <string name="icNo">IC No (Eg:xxxxxxxxxxxx)</string>
    <string name="contactNo">Contact No</string>
    <string name="newPost">New post</string>
    <string name="like">Like</string>
    <string name="caption">Caption</string>
    <string name="likeAmount">00 Likes</string>
    <string name="commentAmount">00 Comments</string>
    <string name="minutes">00 minutes ago</string>
    <string name="comment">Comment</string>
    <string name="AddANewPost">Add A New Post</string>
    <string name="avatar">Avatar</string>
    <string name="done">Done</string>
    <string name="image">Image</string>
    <string name="likes">Likes</string>
    <string name="close">Close</string>
    <string name="Comments">Comments</string>
    <string name="background">Background</string>
    <string name="send">Send</string>
    <string name="commentsHint">Write your comment here…</string>
    <string name="bloodType">Blood Type:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender:</string>
    <string name="youCameToTheRightPlace">You Came To The Right Place</string>
    <string name="enterYourEmailHere">Enter Your Email Here</string>
    <string name="toGetAPasswordReset">To get a password reset</string>
    <string name="urgentRequest">Urgent Request</string>
    <string name="location">Location</string>
    <string name="organisationInformation">Organisation Information</string>
    <string name="nameOfPic">Name of Person In Charge</string>
    <string name="organisationAddress">Organisation Address</string>
    <string name="agreeToTnC"><![CDATA[I agree to the terms and conditions & privacy policy stated.]]></string>
    <string name="subscribeToNewsFeed">Subscribe to our latest newsfeed for upcoming updates.</string>
    <string name="genderRequiredToast">Gender is required!</string>
    <string name="dateOfBirthRequiredToast">Date of birth is required!</string>
    <string name="userRegisterSuccessfully">User Registered Successfully!</string>
    <string name="userLoginSuccessfully">User Login Successfully!</string>
    <string name="requestInfo">Request Info</string>
    <string name="bloodA">A+</string>
    <string name="nameOfPicRequired">Name of person in charge is required!</string>
    <string name="contactNumberRequired">Contact number is required!</string>
    <string name="contactNumAtLeast10Char">Contact number must be at least 10 characters!</string>
    <string name="icNumberRequired">IC number is required!</string>
    <string name="icNumAtLeast12Char">IC number must be 12 characters!</string>
    <string name="passwordRequired">Password is required!</string>
    <string name="passwordAtLeast8Char">Password should contain at least 8 characters!</string>
    <string name="confirmPasswordRequired">Confirm password is required!</string>
    <string name="bothPasswordDoNotMatch">Both passwords does not match!</string>
    <string name="usernameRequired">Username is required!</string>
    <string name="orgnAddressRequired">Organisation address is required!</string>
    <string name="bloodDonation">Blood Donation</string>
    <string name="makeYourAppointmentNow">Make Your Appointment Now</string>
    <string name="emailAddressAlreadyExist">An account with this email address already exists, please choose another email</string>
    <string name="bloodRequestHistory">Blood Request History</string>
    <string name="makeABloodRequest">Make A Blood Request</string>
    <string name="bloodRequest">Blood Request</string>
    <string name="bloodDonationCenterTitle">Blood Donation Center:</string>
    <string name="addressTitle">Address:</string>
    <string name="bloodTypeNeededTitle">Blood Type Needed:</string>
    <string name="contactNoTitle">Contact No:</string>
    <string name="requestInformationTitle">Request Information:</string>
    <string name="address">Address</string>
    <string name="bloodDonationCenter">Blood Donation Center</string>
    <string name="AB_pov">AB+</string>
    <string name="A_pov">A+</string>
    <string name="B_pov">B+</string>
    <string name="O_pov">O+</string>
    <string name="AB_neg">AB-</string>
    <string name="A_neg">A-</string>
    <string name="B_neg">B-</string>
    <string name="O_neg">O-</string>
    <string name="writeYourRequestHere">Write your request here.... (max 500 characters)</string>
    <string name="submitRequest">Submit Request</string>
    <string name="emailRequired">Email is required!</string>
    <string name="emailInvalid">Email address is invalid!</string>
    <string name="nameRequired">Name is required!</string>
    <string name="bloodTypeNeeded">Please select blood type needed</string>
    <string name="requestInfoRequired">Request information is required!</string>
    <string name="requestSubmittedSuccessfully">Request submitted successfully!</string>
    <string name="fullNameLabel">Full Name:</string>
    <string name="fullNameInput">Enter your full name</string>
    <string name="icLabel">IC No:</string>
    <string name="contactNoLabel">Contact No:</string>
    <string name="contactNoExp">Contact No (Eg:012-3456789)</string>
    <string name="emailLabel">Email:</string>
    <string name="addressLabel">Address:</string>
    <string name="appointmentDateLabel">Appointment Date:</string>
    <string name="dateFormat">DD/MM/YYYY</string>
    <string name="appointmentTimeLabel">Appointment Time:</string>
    <string name="SelectTime">Select time slot available</string>
    <string name="bloodGroupLabel">Blood Group:</string>
    <string name="selectBloodType">Select blood type</string>
    <string name="bloodDonationHistoryQuestion">Have you had a donation before?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reminder">Reminder:</string>
    <string name="reminder1">Please make sure you are not on long term medications and has not been intoxicated by alcohol within 24 hours prior to donation.</string>
    <string name="reminder2">You should not be fasting and have had enough sleep(more than 5 hours) the night before donating.</string>
    <string name="reminder3">Minimum interval of 3 months since last donation.</string>
    <string name="reminder4"><![CDATA[Body weight at least 45kg & no chronic medical illness]]></string>
    <string name="reset">reset</string>
    <string name="submit">submit</string>
    <string name="bloodDonationAppointment">Blood Donation Appointment</string>
    <string name="thankYou">Thank You!</string>
    <string name="submissionReceived">Your submission has been received.</string>
    <string name="confirmationDetail">Full confirmation details of the appointment will be sent to your email.</string>
    <string name="dateTitle">Date:</string>
    <string name="timeTitle">Time:</string>
    <string name="timeFormat">0000am</string>
    <string name="fullRequestInformation">Request: %1$s</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="month">Month</string>
    <string name="active">Active</string>
    <string name="userAppointments">User Appointments</string>
    <string name="ongoing">Ongoing</string>
    <string name="nameTitle">Name:</string>
    <string name="appointmentDetails">Appointment Details</string>
    <string name="updateProfile">Update Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="getHelp">Get Help</string>
    <string name="customerSupport">Customer Support</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="icNoFormat">000000-00-0000</string>
    <string name="haveADonationBefore">Have A Donation Before?</string>
    <string name="scanQRCode">Scan QR Code</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="yearlyTopDonor">Yearly Top Donor</string>
    <string name="topDonorUsername">Top Donor Username</string>
    <string name="firstPlaceBackground">FirstPlaceBackground</string>
    <string name="_1st">1st</string>
    <string name="line">line</string>
    <string name="firstPlaceNo">FirstPlaceNo</string>
    <string name="profilePicture">profilePicture</string>
    <string name="bloodAmount">ml</string>
    <string name="secondPlaceBackground">Second Place Background</string>
    <string name="secondPlaceNo">Second Place No</string>
    <string name="_2nd">2nd</string>
    <string name="secondDonorUsername">Second Donor Username</string>
    <string name="thirdDonorUsername">Third Donor Username</string>
    <string name="_3rd">3rd</string>
    <string name="thirdPlaceNo">Third Place No</string>
    <string name="thirdPlaceBackground">Third Place Background</string>
    <string name="viewFullRanking">View Full Ranking</string>
    <string name="scanUserQRCode">Scan the user\'s QR code</string>
    <string name="placeQRinBox">Place QR code within the box above</string>
    <string name="confirmAppointment">Confirm Appointment</string>
    <string name="locationTitle">Location:</string>
    <string name="donorNameTitle">Donor Name:</string>
    <string name="bloodAmountTitle">Blood Amount:</string>
    <string name="selectAmount">Select amount</string>
    <string name="bloodAmountRequiredToast">Blood amount is required!</string>
    <string name="cameraPermissionGrantedToast">Camera permission granted</string>
    <string name="cameraPermissionRequiredToast">Camera permission is required to scan QR Code</string>
    <string name="userAppointmentConfirmedToast">User appointment confirmed!</string>
    <string name="bloodTypeRequiredToast">Blood type is required!</string>
    <string name="bloodDonationAmount">Blood Donation Amount:</string>
    <string name="placeNo">Place No</string>
    <string name="donorNo">1</string>
    <string name="hereToHelp">We\'re here to help!</string>
    <string name="findMoreHelp">Find more help</string>
    <string name="contactUsThroughEmail">Contact us through email:</string>
    <string name="vbantuEmail"><i>vbantumalaysia@gmail.com</i></string>
    <string name="needMoreHelp">Need more help?</string>
    <string name="organisationCoverPhoto">Organisation Cover Photo:</string>
    <string name="uploadImage">Upload Image</string>
    <string name="personInCharge">Person In Charge:</string>
</resources>