<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appointmentbg"
    tools:context=".OrganiserSingleAppointmentDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/aosad_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/aosad_tvAppointmentDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/appointmentDetails"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/aosad_ivRequestBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/aosad_btnScanQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aosad_toolbar"
        app:srcCompat="@drawable/white_transclucent_box" />

    <TextView
        android:id="@+id/aosad_tvFullNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/fullNameLabel"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/aosad_ivRequestBox"
        app:layout_constraintTop_toTopOf="@+id/aosad_ivRequestBox" />

    <TextView
        android:id="@+id/aosad_tvFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fullname"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/aosad_tvFullNameTitle"
        app:layout_constraintEnd_toEndOf="@+id/aosad_ivRequestBox"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvFullNameTitle" />

    <TextView
        android:id="@+id/aosad_tvIcNoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/icLabel"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/aosad_tvFullNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/aosad_tvFullNameTitle" />

    <TextView
        android:id="@+id/aosad_tvIcNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/icNoFormat"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/aosad_tvIcNoTitle"
        app:layout_constraintEnd_toEndOf="@+id/aosad_tvFullName"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvIcNoTitle" />

    <TextView
        android:id="@+id/aosad_tvContactNoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contactNoLabel"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/aosad_tvIcNoTitle"
        app:layout_constraintTop_toBottomOf="@+id/aosad_tvIcNoTitle" />

    <TextView
        android:id="@+id/aosad_tvContactNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/contactNo"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/aosad_tvContactNoTitle"
        app:layout_constraintEnd_toEndOf="@+id/aosad_tvIcNo"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvContactNoTitle" />

    <TextView
        android:id="@+id/aosad_tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/emailLabel"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/aosad_tvContactNoTitle"
        app:layout_constraintTop_toBottomOf="@+id/aosad_tvContactNoTitle" />

    <TextView
        android:id="@+id/aosad_tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/email"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/aosad_tvEmailTitle"
        app:layout_constraintEnd_toEndOf="@+id/aosad_tvContactNo"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvEmailTitle" />

    <TextView
        android:id="@+id/aosad_tvAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/addressLabel"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/aosad_tvEmailTitle"
        app:layout_constraintTop_toBottomOf="@+id/aosad_tvEmailTitle" />

    <TextView
        android:id="@+id/aosad_tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/address"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/aosad_tvAddressTitle"
        app:layout_constraintEnd_toEndOf="@+id/aosad_tvEmail"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvAddressTitle" />

    <TextView
        android:id="@+id/aosad_tvGenderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/aosad_rgGender"
        app:layout_constraintStart_toStartOf="@+id/aosad_tvAddressTitle"
        app:layout_constraintTop_toTopOf="@+id/aosad_rgGender" />

    <RadioGroup
        android:id="@+id/aosad_rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvGenderTitle"
        app:layout_constraintTop_toBottomOf="@+id/aosad_tvAddress">

        <RadioButton
            android:id="@+id/aosad_rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="320dp" />

        <RadioButton
            android:id="@+id/aosad_rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            tools:layout_editor_absoluteX="262dp"
            tools:layout_editor_absoluteY="320dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/aosad_tvDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dateTitle"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/aosad_tvGenderTitle"
        app:layout_constraintTop_toBottomOf="@+id/aosad_rgGender" />

    <TextView
        android:id="@+id/aosad_tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/dateFormat"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/aosad_tvDateTitle"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvDateTitle" />

    <TextView
        android:id="@+id/aosad_tvTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/timeTitle"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/aosad_tvDateTitle"
        app:layout_constraintTop_toBottomOf="@+id/aosad_tvDateTitle" />

    <TextView
        android:id="@+id/aosad_tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/timeFormat"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/aosad_tvTimeTitle"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvTimeTitle" />

    <TextView
        android:id="@+id/aosad_tvBloodGroupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bloodGroupLabel"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/aosad_tvTimeTitle"
        app:layout_constraintTop_toBottomOf="@+id/aosad_tvTimeTitle" />

    <TextView
        android:id="@+id/aosad_tvBloodGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/A_pov"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/aosad_tvBloodGroupTitle"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvBloodGroupTitle" />

    <TextView
        android:id="@+id/aosad_tvDonationBeforeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haveADonationBefore"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/aosad_rgDonationBefore"
        app:layout_constraintStart_toStartOf="@+id/aosad_tvBloodGroupTitle"
        app:layout_constraintTop_toTopOf="@+id/aosad_rgDonationBefore" />

    <RadioGroup
        android:id="@+id/aosad_rgDonationBefore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/aosad_tvDonationBeforeTitle"
        app:layout_constraintTop_toBottomOf="@+id/aosad_tvBloodGroupTitle">

        <RadioButton
            android:id="@+id/aosad_rbYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            tools:layout_editor_absoluteX="186dp"
            tools:layout_editor_absoluteY="576dp" />

        <RadioButton
            android:id="@+id/aosad_rbNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            tools:layout_editor_absoluteX="273dp"
            tools:layout_editor_absoluteY="618dp" />
    </RadioGroup>

    <Button
        android:id="@+id/aosad_btnScanQR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:text="@string/scanQRCode"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>